terraform/account/region/modules/vpc_endpoints/vpce_ec2.tf
locals {
  ec2_endpoints = toset(["ec2", "ec2messages"])
}

resource "aws_vpc_endpoint" "ec2" {
  provider = aws.region
  for_each = local.ec2_endpoints

  vpc_id              = var.vpc_id
  service_name        = "com.amazonaws.${var.region_name}.${each.value}"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true
  security_group_ids  = aws_security_group.vpc_endpoints_private[*].id
  subnet_ids          = var.application_subnets_id
  tags                = { Name = "${each.value}-private" }
}

resource "aws_vpc_endpoint_policy" "ec2" {
  provider = aws.region
  for_each = local.ec2_endpoints

  vpc_endpoint_id = aws_vpc_endpoint.ec2[each.value].id
  policy = jsonencode({
    "Version" : "2012-10-17",
    "Statement" : [
      {
        "Sid" : "AllowAll",
        "Effect" : "Allow",
        "Principal" : {
          "AWS" : "arn:aws:iam::${data.aws_caller_identity.current.account_id}:root"
        },
        "Action" : ["${each.value}:*"],
        "Resource" : "*"
      }
    ]
  })
}
