terraform/account/region/modules/vpc_endpoints/vpce_ecr.tf
locals {
  ecr_endpoints = toset(["api", "dkr"])
}

resource "aws_vpc_endpoint" "ecr" {
  provider = aws.region
  for_each = local.ecr_endpoints

  vpc_id              = var.vpc_id
  service_name        = "com.amazonaws.${var.region_name}.ecr.${each.value}"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true
  security_group_ids  = aws_security_group.vpc_endpoints_private[*].id
  subnet_ids          = var.application_subnets_id
  tags                = { Name = "ecr-${each.value}-private" }
}

resource "aws_vpc_endpoint_policy" "ecr" {
  provider        = aws.region
  for_each        = local.ecr_endpoints
  vpc_endpoint_id = aws_vpc_endpoint.ecr[each.value].id
  policy = jsonencode({
    "Version" : "2012-10-17",
    "Statement" : [
      {
        "Sid" : "AllowAll",
        "Effect" : "Allow",
        "Principal" : {
          "AWS" : "arn:aws:iam::${data.aws_caller_identity.current.account_id}:root"
        },
        "Action" : ["ecr:*"],
        "Resource" : [
          "arn:aws:ecr:${var.region_name}:${data.aws_caller_identity.current.account_id}:*",
          "arn:aws:ecr:${var.region_name}:${var.management_account_id}:*"
        ]
      },
      {
        "Sid" : "AllowGetAuthToken",
        "Effect" : "Allow",
        "Principal" : {
          "AWS" : "arn:aws:iam::${data.aws_caller_identity.current.account_id}:root"
        },
        "Action" : [
          "ecr:GetAuthorizationToken"
        ],
        "Resource" : [
          "*",
        ]
      }
    ]
  })
}
